Button and alignment for inner pages

--- a/eventlogistic.html
+++ b/eventlogistic.html
@@ -95,8 +95,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -209,7 +209,8 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar" >
+        <div class="col-md-4 col-sm-12" >
+          <div class="sidebar">
           <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -217,8 +218,10 @@ div.content {
           <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a class="active" href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+         <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+      </div>
 
-      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
         <h2>Event Logistics</h2>
         <p>Ascent’s team understand how events work, our specialist experience handling every last detail across major international venues including transportation, customs advice and on-site assistance. Whether you are an organiser, exhibitor, trade association or stand builder, you can rely on us to provide a professional and personal service, ensuring you have a trouble-free exhibition experience.
         </p>
