--- a/factoryrelocation.html
+++ b/factoryrelocation.html
@@ -94,8 +94,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -225,7 +225,8 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar" >
+        <div class="col-md-4 col-sm-12" >
+          <div class="sidebar">
           <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -233,8 +234,10 @@ div.content {
           <a class="active" href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+      </div>
 
-      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
         <h2>Machinery and factory relocation </h2>
         <p>Ascent offers safe, professional installation/relocation of factory machinery. This process starts with a consultation and carries through to commissioning. Our team will work with you to understand your goal, timeline, and budget and develop a complete project plan.  We then provide you with a detailed quote and set clear expectations. Once the work begins Ascent’s experienced tradesmen will take care of it all.  We partner with well experienced vendors for transporting machines, full site relocations, original equipment manufacturers and end-users in any of industries taking total responsibility for ensuring the success of any project we undertake. 
         </p>
