--- a/heavylift.html
+++ b/heavylift.html
@@ -93,8 +93,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -224,7 +224,8 @@ div.content {
       </section>
 
      <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar" >
+        <div class="col-md-4 col-sm-12 ">
+          <div class="sidebar">
           <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a class="active" href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -232,8 +233,10 @@ div.content {
           <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+          <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+        </div>
 
-      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
         <h2>Break bulk and Heavy lift </h2>
         <p>Our close relationships with vessel owners and operator for Ascent Excels in Project / Heavy Lift cargos, Steels and other Break-Bulk & General Cargos. Our market knowledge and expertise enable us to serve the cargo interests as well as ship-owners / operators interests. We can arrange ships for full ship-load cargos as well as arrange charter space for part cargos and smaller parcels.  
         </p>
