--- a/insurance.html
+++ b/insurance.html
@@ -95,8 +95,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -207,7 +207,8 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-sm-12 col-md-5 sidebar">
+        <div class="col-sm-12 col-md-4 ">
+          <div class="sidebar">
           <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -215,8 +216,10 @@ div.content {
           <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a  class="active" href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+        </div>
 
-      <div class="ocean_freight" class="col-md-7 col-sm-12 content">
+      <div class="ocean_freight" class="col-md-8 col-sm-12 content">
         <h2>Cargo Insurance</h2>
         <p>Uncertainty is common in all industry, our comprehensive cargo insurance helps you cover both loss or damage of cargo on all modes of transportation.  </p>
 
