--- a/linearservice.html
+++ b/linearservice.html
@@ -93,8 +93,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -224,7 +224,8 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar" >
+        <div class="col-md-4 col-sm-12" >
+          <div class="sidebar">
           <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a class="active" href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -232,8 +233,10 @@ div.content {
           <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+        </div>
 
-      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
         <h2>Break Bulk Loading on Liner service.  </h2>
         <p>Ascent is specialised in carry out Breakbulk operation in regular liner service, based on cargo size and weight flat racks are placed on vessel deck before loading, and cargo will be loaded using port cranes while Lashing team will be ready with Equipments and materials to do safe lashing 
         </p>
