--- a/operations.html
+++ b/operations.html
@@ -93,8 +93,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -224,16 +224,19 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar" >
+        <div class="col-md-4 col-sm-12" >
+          <div class="sidebar">
           <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a class="active" href="operations.html">RO RO Operations <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          </div>
+             <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
         </div>
 
-      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
         <h2>RO RO Operations </h2>
         <p>Ro-Ro activities involves diversification of functions so as to understand the complexities involved in transporting Cars/trucks/Plant equipments globally without any delay , as getting space on a RO-RO vessel is the most complex task . Ascent with its strong market hold and presence ensures vehicles to be planned effectively on RO-RO vessels on time . We are regularly loading on CON –RO vessels providing the flexibility as per the needs of client.  
         </p>
