--- a/projectcargoworldwide.html
+++ b/projectcargoworldwide.html
@@ -94,8 +94,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -225,7 +225,8 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar" >
+        <div class="col-md-4 col-sm-12" >
+          <div class="sidebar">
           <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -233,8 +234,10 @@ div.content {
           <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+      </div>
 
-      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
         <h2>Project Cargo Worldwide </h2>
         <p>Ascent professionals are well experienced in transporting over-dimensional and heavy-lift cargo. Our wide relationships with carrier, Vessel owners and specialized service providers help us to execute best solution to handle your heavy equipment or project cargo safely and at the lowest practical cost.</p>
 
