--- a/services.html
+++ b/services.html
@@ -90,9 +90,10 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
+
 }
 
 @media(max-width: 700px){
@@ -207,25 +208,19 @@ div.content {
 
       <div class="row row_one">
        
-        <div class="col-md-5 col-sm-12 sidebar">
-           <div>
+        <div class="col-md-4 col-sm-12">
+           <div class="sidebar">
           <a class="active" href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="export.html">Export services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-            <!--以下pocket-->
         </div>
-          <!-- <a href="#" class="isometric" style="text-decoration: none;">
-              <span class="iconback ispkt"><i class="fa fa-get-pocket"></i></span><span class="btnttl">Get a Quote</span>
-          </a> -->
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
         </div>
 
-         
-
-
-      <div class="ocean_freight col-md-7 col-sm-12 content">
+      <div class="ocean_freight col-md-8 col-sm-12 content">
         <h2>International Freight Management</h2>
         <p>Be it working as your 3PL or 4PL partner. Ascent services include total logistics management, air and ocean freight forwarding, inland ground and rail services, project cargo and project management, import/export and cross trade services, customs clearance and paper works, warehousing and distribution, global trade compliance services and logistics and technology solutions. </p>
 
