--- a/specialequipment.html
+++ b/specialequipment.html
@@ -94,8 +94,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -225,7 +225,8 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar" >
+        <div class="col-md-4 col-sm-12">
+          <div class="sidebar">
           <a class="active" href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -233,8 +234,10 @@ div.content {
           <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+      </div>
 
-      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
         <h2>Special Equipments </h2>
         <p>Over dimension cargo does not always need Breakbulk or conventional loading, specialised containers are used to safely lash the cargo for general liner loading, ASCENT has own special Equipments also represent other liners who owns special Equipments and offer service to various destinations. Our skilled operation team helps you to minimise the number of containers used for combination of cargo, working with cargo  size, weight, Container stability, Pay load capacity and Terminal capacity every thing in mind. 
         Containers varies from 20 and 40 Open top // High Cube Open top 20 and 40 Flat rack // Super Rack // Flat Bed
