--- a/transport.html
+++ b/transport.html
@@ -16,8 +16,8 @@
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <style>
-/*Testing for button*/
 
+/*for button get a quote*/
 .cross_line{
     display: inline-block;
     position: relative;
@@ -98,8 +98,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -210,7 +210,7 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 ">
+        <div class="col-md-4 col-sm-12 ">
            <div class="sidebar">
            <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
            <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -219,14 +219,10 @@ div.content {
            <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
            <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
            </div>
-
            <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
-
-           <!-- <p><a href="#" class="cross_line"> Get a quote</a></p> -->
-
         </div>
         
-      <div class="ocean_freight" class="col-md-7 col-sm-12 content" >
+      <div class="ocean_freight" class="col-md-8 col-sm-12 content" >
         <h2>Transport Services</h2>
         <p>Ascent excels pick up and Drop service worldwide for containerised and, Over dimension Movement, with vehicles available 24/7 in all our locations and agent locations, Rail movements interstate, ounties or even inter continent, for any cargo size from small box to Mega Equipments.</p>
 
