--- a/airfreight.html
+++ b/airfreight.html
@@ -78,6 +78,9 @@
     font-weight: 700;
     color:#022638;
   }
+   .row_one{
+    background-color:#fff;
+  }
  
 /*SideBar Nav*/
 
@@ -91,9 +94,10 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
+
 }
 
 @media(max-width: 700px){
