--- a/importexport.html
+++ b/importexport.html
@@ -93,8 +93,8 @@
     margin-left: 70px;
   }
 
-  .ocean_freight{
-    /*margin-left:450px;*/
+  .sidebar{
+    margin:12px 47px;
   }
 }
 
@@ -224,7 +224,8 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar">
+        <div class="col-md-4 col-sm-12">
+          <div class="sidebar">
           <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a class="active" href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -232,8 +233,10 @@ div.content {
           <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+        </div>
 
-      <div class="ocean_freight" class="col-md-7 col-sm-12 content">
+      <div class="ocean_freight" class="col-md-8 col-sm-12 content">
         <h2>Import/Export Services and Customs Brokerage </h2>
         <p>ASCENT offer’s customized Import/Export logistics solutions to meet your global transportation and customs brokerage requirements. Our team process your entries in a timely manner at a competitive cost. Our customers have come to rely on Ascent’s successful history of Customs brokerage services.  </p>
 
