--- a/eventlogistic.html
+++ b/eventlogistic.html
@@ -62,9 +62,12 @@
 
   html{
     overflow-x: hidden;
-    background-color: #fff;
   }
 
+  body{
+    font-family: 'Bitter', serif;
+
+  }
   .ocean_freight ul{
     display: inline-table;
   }
@@ -72,8 +75,7 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-    background-color: #fff;
- }
+  }
 
   .ocean_freight h2{
     font-weight: 700;
@@ -81,42 +83,18 @@
   }
 
   .row_one{
-    background-color: #fff;
+    background-color:#fff;
   }
  
 /*SideBar Nav*/
 
-@media(max-width: 400px){
-  .row_one{
-    margin-left: -50px;
-  }
-
-  .content{
-    margin-left: 70px;
-  }
-
-  .sidebar{
-    margin:12px 47px;
-  }
-}
-
-@media(max-width: 700px){
- 
-  .ocean_freight{
-    margin-left:50px;
-  }
-
-  .ocean_freight ul{
-    margin-left: 50px;
-  }
-
-}
 
 
 .sidebar {
-  margin: 50px 70px;
+  margin: 50px 9px;
   padding: 0;
-  width: 330px;
+  /*width: 330px;*/
+  width:90%;
   background-color: #f1f1f1;
   height: 100%;
   overflow: auto;
@@ -146,14 +124,12 @@
 }
 
 .ocean_freight li::before{
-  content:url("assets/arrow.png");
+  content:url("assets/dot.png");
 }
 
 div.content {
   padding: 1px 16px;
 }
-
-
 
 .inner-banner{
     height: 400px;
@@ -280,4 +256,52 @@ div.content {
          </div>
       </footer>
    </body>
+
+<style>
+
+@media screen and (max-width: 365px){
+  .sidebar{
+    margin:9px 0px;
+    width: 100%;
+  }
+  .cross_line {
+    margin-left: -17px;
+  }
+  .ocean_freight {
+    margin-left: 16px;
+  }
+  div.content {
+  padding: 1px 10px;
+  }
+}
+
+@media screen and (max-width: 700px){
+  .ocean_freight ul{
+    margin-left: 50px;
+  }
+  .ocean_freight h2{
+    margin-left: 20px;
+  }
+  .ocean_freight p{
+    margin-left: 20px;
+  }
+  .sidebar{
+    width: 100%;
+    margin:50px 0;
+  }
+  .cross_line {
+    left: 18%;
+  }
+}
+
+@media screen and (min-width: 1900px){
+  .sidebar{
+    margin: 52px 52px;
+  }
+
+  p{
+    padding-right:20px;
+  }
+}
+</style>
 </html>
