--- a/heavylift.html
+++ b/heavylift.html
@@ -64,6 +64,10 @@
     overflow-x: hidden;
   }
 
+  body{
+    font-family: 'Bitter', serif;
+
+  }
   .ocean_freight ul{
     display: inline-table;
   }
@@ -79,42 +83,18 @@
   }
 
   .row_one{
-    background-color: #fff;
+    background-color:#fff;
   }
  
 /*SideBar Nav*/
 
-@media(max-width: 400px){
-  .row_one{
-    margin-left: -50px;
-  }
-
-  .content{
-    margin-left: 70px;
-  }
-
-  .sidebar{
-    margin:12px 47px;
-  }
-}
-
-@media(max-width: 700px){
- 
-  .ocean_freight{
-    margin-left:50px;
-  }
-
-  .ocean_freight ul{
-    margin-left: 50px;
-  }
-
-}
 
 
 .sidebar {
-  margin: 50px 70px;
+  margin: 50px 9px;
   padding: 0;
-  width: 330px;
+  /*width: 330px;*/
+  width:90%;
   background-color: #f1f1f1;
   height: 100%;
   overflow: auto;
@@ -144,31 +124,12 @@
 }
 
 .ocean_freight li::before{
-  content:url("assets/arrow.png");
+  content:url("assets/dot.png");
 }
 
 div.content {
   padding: 1px 16px;
 }
-
-/*@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}*/
-
-/*@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}*/
-/*End Sidebar Nav*/
-
 
 .inner-banner{
     height: 400px;
@@ -186,6 +147,7 @@ div.content {
   transform: translate(-50%, -50%);
   color: white;
 }
+
 
 </style>
    </head>
@@ -295,4 +257,49 @@ div.content {
          </div>
       </footer>
    </body>
+
+   
+<style>
+
+@media screen and (max-width: 365px){
+  .sidebar{
+    margin:9px 0px;
+    width: 100%;
+  }
+  .cross_line {
+    margin-left: -17px;
+  }
+  .ocean_freight {
+    margin-left: 16px;
+  }
+  div.content {
+  padding: 1px 10px;
+  }
+}
+
+@media screen and (max-width: 700px){
+  .ocean_freight ul{
+    margin-left: 50px;
+  }
+  .ocean_freight h2{
+    margin-left: 20px;
+  }
+  .ocean_freight p{
+    margin-left: 20px;
+  }
+  .sidebar{
+    width: 100%;
+    margin:50px 0;
+  }
+  .cross_line {
+    left: 18%;
+  }
+}
+
+@media screen and (min-width: 1900px){
+  .sidebar{
+    margin: 52px 52px;
+  }
+}
+</style>
 </html>
