--- a/insurance.html
+++ b/insurance.html
@@ -315,5 +315,13 @@ div.content {
     margin: 52px 52px;
   }
 }
+
+
+@media screen and (min-width:1200px){
+    p{
+    padding-right: 15px;
+  }
+}
+
 </style>
 </html>
