--- a/operations.html
+++ b/operations.html
@@ -57,6 +57,7 @@
 }
 
 
+
 /*End*/
 
   html{
@@ -196,7 +197,7 @@ div.content {
              <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
         </div>
 
-      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight">
         <h2>RO RO Operations </h2>
         <p>Ro-Ro activities involves diversification of functions so as to understand the complexities involved in transporting Cars/trucks/Plant equipments globally without any delay , as getting space on a RO-RO vessel is the most complex task . Ascent with its strong market hold and presence ensures vehicles to be planned effectively on RO-RO vessels on time . We are regularly loading on CON –RO vessels providing the flexibility as per the needs of client.  
         </p>
@@ -299,6 +300,15 @@ div.content {
   .sidebar{
     margin: 52px 52px;
   }
+
+ }
+
+
+@media screen and (min-width:1200px){
+  p{
+  padding-right: 15px;
+}
+
 }
 </style>
 </html>
