--- a/specialequipment.html
+++ b/specialequipment.html
@@ -301,5 +301,12 @@ div.content {
     margin: 52px 52px;
   }
 }
+
+
+@media screen and (min-width:1200px){
+    p{
+    padding-right: 15px;
+  }
+}
    </style>
 </html>
