--- a/operations.html
+++ b/operations.html
@@ -56,6 +56,10 @@
   height: 100%;
 }
 
+.ocean_freight h2{
+  margin-top: 45px;
+}
+
 
 
 /*End*/
@@ -305,10 +309,10 @@ div.content {
 
 
 @media screen and (min-width:1200px){
-  p{
-  padding-right: 15px;
+    p{
+    padding-right: 15px;
+  }
 }
 
-}
 </style>
 </html>
