--- a/services.html
+++ b/services.html
@@ -56,6 +56,10 @@
   height: 100%;
 }
 
+.ocean_freight h2{
+  margin-top: 45px;
+}
+
 
 /*End*/
 
@@ -336,5 +340,6 @@ div.content {
     padding-right: 15px;
   }
 }
+
    </style>
 </html>
