--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <!-- Start WOWSlider.com HEAD section -->
-<link rel="stylesheet" type="text/css" href="assets/engine2/style.css" />
-<script type="text/javascript" src="assets/engine2/jquery.js"></script>
-<!-- End WOWSlider.com HEAD section -->
+    <!-- Start Slider.com HEAD section -->
+    
+    <!-- End Slider.com HEAD section -->
 
     <style>
+
+
 ul li a {
     text-transform: uppercase;
     color: #022638;
