--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@ ul li a {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="http://geographical.co.uk/media/k2/items/cache/d0d5caef53a97465ee5797663b3cd459_XL.jpg" alt="Los Angeles" style="width:100%; height: 450px;">
+        <img src="assets/LINER SERVICE OP2.jpg" style="width:100%; height: 500px;">
       </div>
 
       <div class="item">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Arabian_Sea_-_n22e70.jpg/1200px-Arabian_Sea_-_n22e70.jpg" alt="Chicago" style="width:100%; height: 450px;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Arabian_Sea_-_n22e70.jpg/1200px-Arabian_Sea_-_n22e70.jpg" alt="Chicago" style="width:100%; height: 500px;">
       </div>
     
       <div class="item">
-        <img src="http://geographical.co.uk/media/k2/items/cache/d0d5caef53a97465ee5797663b3cd459_XL.jpg" alt="New york" style="width:100%; height: 450px;">
+        <img src="assets/LINER HOME.jpg" alt="New york" style="width:100%; height: 500px;">
       </div>
     </div>
 
