--- a/getaquote.html
+++ b/getaquote.html
@@ -43,7 +43,7 @@
             <button class="toggle-menu" aria-label="Responsive Navigation Menu">☰</button>
          </nav>
       </header>
-      <section style="background-image: url(assets/bg.jpg);" >
+      <section>
          <div class="agileitscontainerwthree">
             <form id="test_form" action="#" method="post">
                <h2 class="form-title" >GET A QUOTE</h2>
@@ -53,15 +53,7 @@
                         <div class="form-group wthree col-md-6">
                            <label class="control-label" for="first-name-1">Where do you want to ship from?
                            </label>
-                           <select class="form-control" id="state" name="pt_state" required>
-                              <option value="" selected="selected">Select a Port</option>
-                              <option value="AL">Alabama</option>
-                              <option value="AK">Alaska</option>
-                              <option value="AB">Alberta</option>
-                              <option value="AS">American Samoa</option>
-                              <option value="AZ">Arizona</option>
-                              <option value="AR">Arkansas</option>
-                           </select>
+                              <input class="form-control" id="first-name-1" name="pt_first" value="" type="text" maxlength="50" required>
                         </div>
                         <!-- <div class="form-group w3-agile col-md-4">
                            <label class="control-label" for="initial-1">Middle Initial <span class="label label-info">Optional</span></label>
@@ -69,28 +61,7 @@
                            </div> -->
                         <div class="form-group getaquote col-md-6">
                            <label class="control-label" for="last-name-1">Where do you want to ship to?</label>
-                           <select class="form-control" id="state" name="pt_state" required>
-                              <option value="" selected="selected">Select a Port</option>
-                              <option value="AL">Alabama</option>
-                              <option value="AK">Alaska</option>
-                              <option value="AB">Alberta</option>
-                              <option value="AS">American Samoa</option>
-                              <option value="AZ">Arizona</option>
-                              <option value="AR">Arkansas</option>
-                              <option value="BC">British Columbia</option>
-                              <option value="CA">California</option>
-                              <option value="CO">Colorado</option>
-                              <option value="CT">Connecticut</option>
-                              <option value="DE">Delaware</option>
-                              <option value="DC">District of Columbia</option>
-                              <option value="FM">Federated States of Micronesia</option>
-                              <option value="FL">Florida</option>
-                              <option value="GA">Georgia</option>
-                              <option value="GU">Guam</option>
-                              <option value="HI">Hawaii</option>
-                              <option value="ID">Idaho</option>
-                              <option value="IL">Illinois</option>
-                           </select>
+                             <input class="form-control" id="first-name-1" name="pt_first" value="" type="text" maxlength="50" required>
                         </div>
                      </fieldset>
                   </div>
