--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     <style>
 
 
-@media(min-width: 1600){
-  .chevron{
-    text-align: center;
-  }
+@media screen and (min-width: 1900px){
+   .animate-arrow {
+    left: 7px;
+    padding: 1px 665px;
+}
+
 }
 
 
