--- a/projectcargoworldwide.html
+++ b/projectcargoworldwide.html
@@ -374,7 +374,7 @@ div.content {
            <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
       </div>
 
-      <div class="col-md-8 col-sm-12 content ocean_freight" class="">
+      <div class="col-md-8 col-sm-12 content ocean_freight">
         <h2>Project Cargo Worldwide </h2>
         <p>Ascent professionals are well experienced in transporting over-dimensional and heavy-lift cargo. Our wide relationships with carrier, Vessel owners and specialized service providers help us to execute best solution to handle your heavy equipment or project cargo safely and at the lowest practical cost.</p>
 
