alignment for inner pages in larger screen size

--- a/projectcargoworldwide.html
+++ b/projectcargoworldwide.html
@@ -311,6 +311,10 @@ div.content {
   .sidebar{
     margin: 52px 52px;
   }
+   div.ocean_freight p{
+    padding-right:125px;
+  }
+
 }
 </style>
 </html>
