--- a/airfreight.html
+++ b/airfreight.html
@@ -13,6 +13,8 @@
       <!-- font -->
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
+
       <style>
 
 /*for button get a quote*/
@@ -66,6 +68,7 @@
     overflow-x: hidden;
   }
 
+
   body{
     font-family: 'Bitter', serif;
 
@@ -86,6 +89,10 @@
 
   .row_one{
     background-color:#fff;
+  }
+
+  div.ocean_freight{
+    margin-bottom: 60px;
   }
  
 /*SideBar Nav*/
@@ -318,6 +325,10 @@ div.content {
   .sidebar{
     margin: 52px 52px;
   }
+   div.ocean_freight p{
+    padding-right:125px;
+  }
+
 }
 
 
