--- a/importexport.html
+++ b/importexport.html
@@ -14,6 +14,7 @@
       <!-- font -->
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
       <style>
 
 
@@ -323,6 +324,16 @@ div.content {
     p{
     padding-right: 15px;
   }
+}
+
+@media screen and (min-width: 1900px){
+  .sidebar{
+    margin: 52px 52px;
+  }
+   div.ocean_freight p{
+    padding-right:125px;
+  }
+
 }
 
 </style>
