--- a/linearagency.html
+++ b/linearagency.html
@@ -14,6 +14,7 @@
       <!-- font -->
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
       <style>
 
 
