--- a/services.html
+++ b/services.html
@@ -14,8 +14,12 @@
       <!-- font -->
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/mediaqueries.css">
+
       <style>
 /*for button get a quote*/
+
+
 .cross_line{
     display: inline-block;
     position: relative;
@@ -332,8 +336,11 @@ div.content {
   .sidebar{
     margin: 52px 52px;
   }
-}
+   div.ocean_freight p{
+    padding-right:125px;
+  }
 
+}
 
 @media screen and (min-width:1200px){
     p{
