--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@ ul li a {
 
       </ul>
     </div>
+
   <nav>
     <h1>
       <a href="index.html"><img src="assets/logo.png" class="logo"></a>
@@ -225,6 +226,7 @@ ul li a {
                   <li><a href="services.html">Services </a></li>
                   <li><a href="#">Portfolio</a></li>
                </ul>
+               <button class="toggle-menu" aria-label="Responsive Navigation Menu">☰</button>
   </nav>
 </header>
 
